rnsc/test_data/rns_integration/error/parser/inner_classes_attr_directive/attr_end_trailing_tokens_recovers.rns
; Tests that parser continues after trailing tokens error and reports subsequent errors
; Expected errors: E-036 (trailing tokens), E-007 (unknown token in class body)

.class public MyClass
.super java/lang/Object

.inner_classes_attr
.inner_classes_attr_end trailing_tokens

     unknown_token ; <- E-007, still reported after recovery

.class_end
